# LogAndConfig

./: CMakeLists.txt  LICENSE  README.md  config.json  main.cpp
Config/: Log.hpp
ConfigLoader/: ConfigLoader.cpp  ConfigLoader.hpp
